[package]
name = "rust-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_python"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.27"
pyo3 = { version = "0.24.0", features = ["extension-module"] }
pyo3-log = "0.12.4"
# pyo3 = { version = "0.24", features = ["generate-import-lib", "num-bigint", "py-clone"] }
