[project]
name = "rust-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MyNextWeekend", email = "jinhu007@outlook.com" }
]
dependencies = [
]

readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "rust_python._lowlevel"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.8.3",
]
